--- a/src/component/App/App.css
+++ b/src/component/App/App.css
@@ -95,6 +95,7 @@ section {
 
 .btn {
   margin-top: 1rem;
+  margin-left: -20em;
   display: inline-block;
   padding: 0.8rem 3rem;
   font-size: 1.7rem;
@@ -125,6 +126,7 @@ section {
 .heading {
   text-align: center;
   padding-bottom: 2rem;
+  margin-left: -10em;
   color: #fff;
   text-transform: uppercase;
   font-size: 4rem;
@@ -380,7 +382,8 @@ section {
   background: #333;
   border-radius: 0.5rem;
   padding: 1rem;
-  margin: 0.7rem 0;
+  margin-left: 0em;
+  margin-bottom: 2em;
   font-size: 1.5rem;
   color: #fff;
   text-transform: none;
